# wqm-1

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml  requirements.txt  setup.sh
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: bom-check.yml  ci.yml  release.yml
config/: .env.example  pinmap.yaml  policies.yaml
docs/: firmware-overview.md  getting-started.md  hardware-overview.md  sensor-calibration.md
src/: main.py
src/calibration/: calibrate.py
src/control/: led.py  relay.py  rules.py
src/radio/: cayenne.py  lorawan.py  sx1262.py
src/sensors/: ads1115.py  gps.py  orp.py  ph.py  tds.py  temperature.py  turbidity.py
src/storage/: database.py
src/utils/: config.py  health.py  identity.py  watchdog.py
systemd/: bluesignal-wqm.service
tests/: conftest.py  test_ads1115.py  test_calibrate.py  test_db.py  test_gps.py  test_hardware_config.py  test_health.py  test_identity.py  test_lora_tx.py  test_lorawan.py  test_relay.py  test_rules.py  test_sensors.py
