[project]
name = "bluesignal-wqm1"
version = "1.0.0"
description = "BlueSignal WQM-1 Water Quality Monitor — open-source firmware"
requires-python = ">=3.11"
license = {text = "GPL-3.0-or-later"}

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "hardware: marks tests that require physical hardware (I2C, GPIO, SPI)",
]
